--- a/main.css
+++ b/main.css
@@ -30,5 +30,9 @@ body{
 .buisness-container{
     background-color: whitesmoke;
     color: black;
+    height: 160px;
 }
 
+.buisness-donate-button{
+    direction: rtl;
+}
