--- a/main.css
+++ b/main.css
@@ -34,8 +34,9 @@ body{
 }
 
 .buisness-donate-button{
-    direction: rtl;
+    margin: auto;
     float: right;
+    height: 160px;
 }
 
 .buisness-image{
