--- a/main.css
+++ b/main.css
@@ -15,6 +15,14 @@
     margin:0 auto;
 }
 
+.centering-header{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: #954711;
+    text-align: center;
+}
 .centering-container{
     max-width: 960px;
     margin: auto;
