--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    background-color: #954711;
+    background-color: deepskyblue;
     text-align: center;
 }
 
@@ -33,7 +33,7 @@
 
 body{
     font-family: Georgia, serif;
-    background-color: #954711;
+    background-color: lightskyblue;
     color: black;
 }
 
