--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@
     width: 100%;
     background-color: deepskyblue;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .centering-container{
